A little more constant cleanup in MObject